Updated some dotfiles

--- a/src/i3/config
+++ b/src/i3/config
@@ -99,6 +99,7 @@ bindsym $mod+n exec nautilus
 bindsym XF86AudioRaiseVolume exec amixer -q set Master 2%+ unmute
 bindsym XF86AudioLowerVolume exec amixer -q set Master 2%- unmute
 bindsym XF86AudioMute exec amixer -D pulse set Master toggle
+bindsym XF86AudioMicMute exec amixer -q set Capter toggle
 
 # Focus the parent container
 bindsym $mod+a focus parent
