--- a/src/fonts.conf
+++ b/src/fonts.conf
@@ -1,1 +1,27 @@
-<?xml version="1.0"?><match>  <edit mode="assign" name="autohint">  <bool>true</bool></edit><edit mode="assign" name="hinting">  <bool>true</bool></edit><edit mode="assign" name="hintstyle">  <const>hintslight</const></edit><match target="font">  <edit mode="assign" name="rgba">   <const>none</const>  </edit></match><match target="font">  <edit mode="assign" name="hinting">   <bool>true</bool>  </edit></match><match target="font">  <edit mode="assign" name="hintstyle">   <const>hintmedium</const>  </edit></match><match target="font">  <edit mode="assign" name="antialias">   <bool>true</bool>  </edit></match></match>
+<?xml version='1.0'?>
+<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
+<fontconfig>
+    <match target="font">
+        <edit name="hinting" mode="assign">
+            <bool>true</bool>
+        </edit>
+    </match>
+
+    <match target="font">
+        <edit name="autohint" mode="assign">
+            <bool>true</bool>
+        </edit>
+    </match>
+
+    <match target="font">
+        <edit name="hintstyle" mode="assign">
+            <const>hintslight</const>
+        </edit>
+    </match>
+
+    <match target="font">
+        <edit name="rgba" mode="assign">
+            <const>rgb</const>
+        </edit>
+    </match>
+</fontconfig>
