Pretty much working commit, check the diff for full details.
* Simplified a bit of logic in pull/push.
* TODO: Make _copy, pull, and push take kwargs instead

--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ SaveToLocation: ./files/
 
 # Print the contents of the `reminders.rst` file after
 # everything's copied
-Reminders: True
+Reminders: False
 
 # Remember: if SaveAs is not specified, it will use the
 # name of the parent element
