--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@
 #
 
 # REQUIRED, but can be changed
-SaveToLocation: ./files/
+SaveToLocation: files/
 
 # Print the contents of the `reminders.rst` file after
 # everything's copied
@@ -12,6 +12,8 @@ Reminders: False
 # Remember: if SaveAs is not specified, it will use the
 # name of the parent element
 #
+# Note: Tilde (~) is resolved as the home directory on
+# Windows
 vimrc:
     LocationLinux: ~/.vimrc
     LocationWin: ~/_vimrc
@@ -26,7 +28,7 @@ vim:
         - bundle
         - tags
         - view
-    AdditionalFunction: vim
+    #AdditionalFunction: vim
 
 xinitrc:
     LocationLinux: ~/.xinitrc
