up to date so far

--- a/dotfiles_config.yml
+++ b/dotfiles_config.yml
@@ -27,11 +27,9 @@ Work:
         Keep: True
         MoveTo: M:/_vimrc
 
-    /.vim$:
+    .vim:
         Keep: True
         MoveTo: M:/vimfiles
 
 Linux:
     KeepAll: True
-
-
