Added the config file, and some better gitignore stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-*.pyc
+*.py[cdo]
 __pycache__
-open
+
+.vim/bundle
+Desktop
+Documents
+Downloads
+Pictures
+Public
+Videos
+workspace
+
+workbench.*
