This caused problems on Linux, see if it causes problems on Windows

--- a/.gitconfig
+++ b/.gitconfig
@@ -17,5 +17,5 @@
 #[credential]
 #   helper = !\"C:/Program Files (x86)/GitExtensions/GitCredentialWinStore/git-credential-winstore.exe\"
 
-[difftool "gvimdiff"]
-    path = gvim -d
+#[difftool "gvimdiff"]
+#    path = gvim -d
