--- a/.gitconfig
+++ b/.gitconfig
@@ -12,6 +12,7 @@
 
 [core]
     editor = vim
+	autocrlf = input
 
 #[credential]
 #   helper = !\"C:/Program Files (x86)/GitExtensions/GitCredentialWinStore/git-credential-winstore.exe\"
