--- a/.i3/config
+++ b/.i3/config
@@ -100,8 +100,8 @@ bindsym XF86AudioMute exec amixer -D pulse set Master toggle
 bindsym XF86AudioMicMute exec amixer -qD pulse set Capture toggle
 
 # Brightness
-bindsym XF86MonBrightnessDown exec sudo brightness -d
-bindsym XF86MonBrightnessUp exec sudo brightness -u
+bindsym XF86MonBrightnessDown exec sudo brightness -d 200
+bindsym XF86MonBrightnessUp exec sudo brightness -u 200
 
 # Focus the parent container
 bindsym $mod+a focus parent
