--- a/.i3/config
+++ b/.i3/config
@@ -170,6 +170,14 @@ bindsym $mod+r mode "resize"
 # General styling here. Colors, fonts, etc.
 font pango:DejaVu Sans Mono 10
 
+# Colors
+# class                 border  backgr. text    indicator
+client.focused          #4c7899 #285577 #ffffff #2e9ef4
+client.focused_inactive #333333 #5f676a #ffffff #484e50
+client.unfocused        #333333 #222222 #888888 #292d2e
+client.urgent           #2f343a #900000 #ffffff #900000
+#client.placeholder      #000000 #0c0c0c #ffffff #000000
+
 # Next are the configurations for which windows should float.
 # Sadly, until I figure out a dynamic way to do this, we'll have to enter tham all in
 # statically, and fully.
