updated batterycheck and systemd setup, and zshrc

--- a/workspace/systemd/Makefile
+++ b/workspace/systemd/Makefile
@@ -1,9 +1,12 @@
 # Makefile
 #
 
+DEST=/etc/systemd
+
 all:
 	@echo Nothing to do
 
 install:
-	cp * /etc/systemd/system
+	@# Copy everything but the makefile
+	ls -I Makefile | xargs cp -rt $(DEST)
 	systemctl daemon-reload
