--- a/.gitconfig
+++ b/.gitconfig
@@ -12,7 +12,7 @@
 
 [core]
     editor = vim
-    autocrlf = true
+    autocrlf = input
 
 #[credential]
 #   helper = !\"C:/Program Files (x86)/GitExtensions/GitCredentialWinStore/git-credential-winstore.exe\"
