--- a/.i3/config
+++ b/.i3/config
@@ -12,7 +12,7 @@
 set $mod Mod4
 set $alt Mod1
 
-set $terminal gnome-terminal
+set $terminal urxvt
 
 # TODO: Clean this up
 # Font for window titles. Will also be used by the bar unless a different font
@@ -103,8 +103,8 @@ bindsym XF86AudioMicMute exec amixer -qD pulse set Capture toggle
 bindsym $mod+XF86MonBrightnessDown exec sudo _brightness
 bindsym $mod+XF86MonBrightnessUp exec sudo _brightness
 
-bindsym XF86MonBrightnessDown exec sudo _brightness -d
-bindsym XF86MonBrightnessUp exec sudo _brightness -u
+bindsym XF86MonBrightnessDown exec sudo xbacklight -inc 5
+bindsym XF86MonBrightnessUp exec sudo xbacklight -dec 5
 
 bindsym XF86Display exec arandr
 
