--- a/.config/hexchat/hexchat.conf
+++ b/.config/hexchat/hexchat.conf
@@ -1,4 +1,4 @@
-version = 2.10.1
+version = 2.11.0
 away_auto_unmark = 0
 away_omit_alerts = 0
 away_reason = I'm busy
@@ -9,7 +9,7 @@ away_track = 1
 completion_amount = 5
 completion_auto = 0
 completion_sort = 1
-completion_suffix = ,
+completion_suffix = :
 dcc_auto_chat = 0
 dcc_auto_recv = 1
 dcc_auto_resume = 1
@@ -55,25 +55,25 @@ gui_input_nick = 1
 gui_input_spell = 1
 gui_input_style = 1
 gui_join_dialog = 0
-gui_lagometer = 1
+gui_lagometer = 0
 gui_lang = 15
 gui_mode_buttons = 0
 gui_pane_divider_position = 0
-gui_pane_left_size = 128
-gui_pane_right_size = 100
+gui_pane_left_size = 165
+gui_pane_right_size = 299
 gui_pane_right_size_min = 80
 gui_quit_dialog = 0
 gui_search_pos = 0
 gui_slist_fav = 0
-gui_slist_select = 31
+gui_slist_select = 0
 gui_slist_skip = 1
 gui_tab_chans = 1
 gui_tab_dialogs = 1
 gui_tab_dots = 0
 gui_tab_icons = 1
-gui_tab_layout = 2
+gui_tab_layout = 0
 gui_tab_newtofront = 2
-gui_tab_pos = 1
+gui_tab_pos = 6
 gui_tab_scrollchans = 0
 gui_tab_server = 1
 gui_tab_small = 0
@@ -102,14 +102,14 @@ gui_ulist_sort = 0
 gui_ulist_style = 1
 gui_url_mod = 0
 gui_usermenu = 0
-gui_win_height = 992
+gui_win_height = 1010
 gui_win_fullscreen = 0
 gui_win_left = 0
-gui_win_modes = 0
+gui_win_modes = 1
 gui_win_save = 1
 gui_win_state = 0
 gui_win_swap = 0
-gui_win_top = 56
+gui_win_top = 38
 gui_win_ucount = 0
 gui_win_width = 1676
 identd = 1
@@ -185,7 +185,7 @@ text_autocopy_stamp = 0
 text_autocopy_text = 1
 text_background = 
 text_color_nicks = 0
-text_font = Monospace 9
+text_font = DejaVu Sans Mono for Powerline 12
 text_font_main = Monospace 9
 text_font_alternative = Arial Unicode MS,Lucida Sans Unicode,MS Gothic,Unifont
 text_indent = 1
