big update: added compton config, updated hexchat config, i3 is a little nicer; still needs color change, and now using termite

--- a/.config/hexchat/colors.conf
+++ b/.config/hexchat/colors.conf
@@ -1,41 +1,42 @@
 color_0 = ffff ffff ffff
-color_1 = 694a 694a 694a
-color_2 = 41e9 41e9 bda0
-color_3 = 4074 b894 83d7
-color_4 = f858 6790 6253
-color_5 = 9eee 426e 4ef5
-color_6 = eb56 0548 fccf
-color_7 = fb92 93ff 0424
-color_8 = fb72 f70f 0805
-color_9 = 03c8 ff6c 9e3d
-color_10 = 67ea bd3f bd3f
-color_11 = 8181 f4f4 f6f6
-color_12 = 52c6 7656 e0ff
-color_13 = f73b 04cd cce6
-color_14 = 8550 82f1 82f1
-color_15 = d2d2 cece cece
-color_16 = dedf e0e5 e1dc
-color_17 = c370 6e1b 6e1b
-color_18 = 71a2 7765 ca66
-color_19 = 83a0 bd54 8986
-color_20 = db32 7424 660f
-color_21 = d7aa 8371 8f05
-color_22 = c01f 79f1 c54f
-color_23 = aa18 9646 61fd
-color_24 = af9a b34c 3091
-color_25 = 99ed e17d 7cb6
-color_26 = 8ad1 b31d b31d
-color_27 = 9e9e bebe dcdc
-color_28 = 733c a58d bcaa
-color_29 = d5c0 9e36 ca2b
-color_30 = d253 dc14 d8aa
-color_31 = e318 e318 e318
-color_256 = ffff ffff ffff
-color_257 = 3535 6e6e c1c1
-color_258 = c8c8 c8c8 c8c8
-color_259 = 5084 5084 5084
-color_260 = cccc 1010 1010
-color_261 = 9c06 99a7 99a7
-color_262 = f8f8 0a0a 0202
-color_263 = 79b2 aa4f a571
-color_264 = 9595 9595 9595
+color_1 = 4949 4848 3e3e
+color_2 = 6666 d9d9 efef
+color_3 = 6b6b c7c7 2b2b
+color_4 = f9f9 2626 7272
+color_5 = 7777 5454 3e3e
+color_6 = 94bc 5925 ffff
+color_7 = fdfd 9797 1f1f
+color_8 = e6e6 dbdb 7474
+color_9 = a6a6 e2e2 2e2e
+color_10 = 3542 b072 9155
+color_11 = 6666 efef d566
+color_12 = 6666 d9d9 efef
+color_13 = aeae 8181 ffff
+color_14 = 7575 7171 5e5e
+color_15 = cfcf cfcf c2c2
+color_16 = ffff ffff ffff
+color_17 = 4949 4848 3e3e
+color_18 = 6666 d9d9 efef
+color_19 = 6b6b c7c7 2b2b
+color_20 = f9f9 2626 7272
+color_21 = 770d 53e1 3e1f
+color_22 = 94bc 5925 ffff
+color_23 = fdfd 9797 1f1f
+color_24 = e6e6 dbdb 7474
+color_25 = a6a6 e2e2 2e2e
+color_26 = 3542 b072 9155
+color_27 = 6666 efef d566
+color_28 = 6666 d9d9 efef
+color_29 = aeae 8181 ffff
+color_30 = 7575 7171 5e5e
+color_31 = cfcf cfcf c2c2
+color_256 = f8f8 f8f8 f2f2
+color_257 = 4949 4848 3e3e
+color_258 = cfcf cfcf c2c2
+color_259 = 1a8f 1a8f 1a8f
+color_260 = e6e6 dbdb 7474
+color_261 = fdfd 9797 1f1f
+color_262 = a6a6 e2e2 2e2e
+color_263 = 6666 d9d9 efef
+color_264 = 7575 7171 5e5e
+color_265 = f9f9 2626 7272
