--- a/.config/hexchat/hexchat.conf
+++ b/.config/hexchat/hexchat.conf
@@ -1,6 +1,6 @@
 version = 2.11.0
 away_auto_unmark = 0
-away_omit_alerts = 0
+away_omit_alerts = 1
 away_reason = I'm busy
 away_show_once = 1
 away_size_max = 300
@@ -47,7 +47,7 @@ gui_dialog_left = 0
 gui_dialog_top = 0
 gui_dialog_width = 500
 gui_filesize_iec = 0
-gui_focus_omitalerts = 0
+gui_focus_omitalerts = 1
 gui_hide_menu = 0
 gui_input_attr = 1
 gui_input_icon = 1
@@ -77,7 +77,7 @@ gui_tab_pos = 6
 gui_tab_scrollchans = 0
 gui_tab_server = 1
 gui_tab_small = 0
-gui_tab_sort = 1
+gui_tab_sort = 0
 gui_tab_trunc = 20
 gui_tab_utils = 0
 gui_throttlemeter = 1
@@ -86,8 +86,8 @@ gui_transparency = 255
 gui_tray = 1
 gui_tray_away = 0
 gui_tray_blink = 1
-gui_tray_close = 0
-gui_tray_minimize = 0
+gui_tray_close = 1
+gui_tray_minimize = 1
 gui_tray_quiet = 0
 gui_ulist_buttons = 0
 gui_ulist_color = 0
@@ -114,7 +114,7 @@ gui_win_ucount = 0
 gui_win_width = 1676
 identd = 1
 input_balloon_chans = 0
-input_balloon_hilight = 0
+input_balloon_hilight = 1
 input_balloon_priv = 0
 input_balloon_time = 20
 input_beep_chans = 0
@@ -128,20 +128,20 @@ input_flash_priv = 1
 input_perc_ascii = 0
 input_perc_color = 0
 input_tray_chans = 0
-input_tray_hilight = 1
-input_tray_priv = 1
+input_tray_hilight = 0
+input_tray_priv = 0
 irc_auto_rejoin = 0
 irc_ban_type = 1
 irc_cap_server_time = 1
-irc_conf_mode = 0
+irc_conf_mode = 1
 irc_extra_hilight = 
-irc_hide_nickchange = 0
+irc_hide_nickchange = 1
 irc_hide_version = 0
 irc_hidehost = 0
 irc_id_ntext = 
 irc_id_ytext = 
 irc_invisible = 0
-irc_join_delay = 5
+irc_join_delay = 8
 irc_logging = 0
 irc_logmask = %n/%c.log
 irc_nick1 = sange
@@ -156,7 +156,7 @@ irc_raw_modes = 0
 irc_real_name = realname
 irc_servernotice = 0
 irc_skip_motd = 0
-irc_user_name = sange___
+irc_user_name = sange
 irc_wallops = 0
 irc_who_join = 1
 irc_whois_front = 1
