moved things to local bin

--- a/.i3/config
+++ b/.i3/config
@@ -219,7 +219,7 @@ client.urgent           #2f343a #900000 #ffffff #900000
 
 for_window [title="^[T|t][E|e][S|s][T|t][I|i][N|n][G|g]$"] floating enable
 
-for_window [class="[C|c]hromium"] border none, move container to workspace $WS1
+for_window [class="[C|c]hromium"] border none
 
 for_window [class="[q|Q]alculate"] floating enable
 for_window [class="[s|S]kype" title="Options"] floating enable
@@ -233,10 +233,9 @@ assign [class="^hl2_linux"] $WS9
 assign [class="[d|D]olphin-emu"] $WS9
 
 assign [class="[s|S]kype"] $WS7
-
 assign [class="[H|h]exchat"] $WS6
-
 assign [class="[G|g]nome-system-monitor"] "10:monitor"
+assign [class="[C|c]hromium"] $WS1
 
 
 ###
