--- a/.i3/config
+++ b/.i3/config
@@ -52,7 +52,7 @@ bindsym $mod+Print exec --no-startup-id scrot
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 bindsym $mod+p exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+Shift+p exec dmenu_run
+bindsym $mod+Shift+p exec --no-startup-id dmenu_run
 
 # Change focus
 bindsym $mod+h focus left
@@ -195,6 +195,13 @@ mode "power"
 {
     bindsym Return mode "default"
     bindsym Escape mode "default"
+}
+
+bindsym Caps_Lock mode "Caps Lock"
+
+mode "Caps Lock"
+{
+    bindsym Caps_Lock mode "default"
 }
 
 # Resize mode is nice
