--- a/.i3/config
+++ b/.i3/config
@@ -129,7 +129,7 @@ set $WS4 4
 set $WS5 5
 set $WS6 6
 set $WS7 7:skype
-set $WS8 8
+set $WS8 8:
 set $WS9 9
 set $WS0 0
 set $WSgame 20:game
@@ -202,7 +202,7 @@ mode "power"
 bindsym $mod+r mode "resize"
 
 # General styling here. Colors, fonts, etc.
-font pango:DejaVu Sans Mono 10
+font pango:DejaVu Sans Mono, Icons 10
 
 # Colors
 # class                 border  backgr. text    indicator
@@ -228,7 +228,8 @@ for_window [class="[s|S]kype" title="Options"] floating enable
 # Games and Steam
 for_window [class="[s|S]team"] border none
 for_window [title="Friends|Chat$" class="[S|s]team"] floating enable
-assign [class="[s|S]team"] "8:steam"
+
+assign [class="[s|S]team"] $WS8
 assign [class="^dota"] $WSgame
 assign [class="^csgo"] $WSgame
 assign [class="^hl2_linux"] $WSgame
@@ -239,21 +240,23 @@ assign [class="[H|h]exchat"] $WS6
 assign [class="[G|g]nome-system-monitor"] "10:monitor"
 assign [class="[C|c]hromium"] $WS1
 
+# Pop up windows and task dialogs should open floating
+for_window [window_role="pop-up"] floating enable
+for_window [window_role="task_dialog"] floating enable
 
 ###
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar
 {
+    font pango:DejaVu Sans Mono, Icons 10
+
     strip_workspace_numbers yes
     position top
     workspace_buttons yes
-    status_command i3status -c ~/.i3/status
+    #status_command i3status -c ~/.i3/status
+    status_command i3conky
     mode dock
-    #status_command /home/nick/.i3/bash
-    #status_command i3-wsbar -c "dzconky -x %x"
-    #status_command i3status | i3-wsbar -c "dzen2 -x %x -dock"
-    #status_command i3-wsbar -c "dzen2 -x %x"
 }
 
-exec --no-startup-id /usr/bin/_check_compton
+exec --no-startup-id _check_compton
