--- a/.conkyrc
+++ b/.conkyrc
@@ -22,8 +22,8 @@ ${if_match "$gw_iface" == "wlp4s0"}
         \#FFFF00"
     ${endif}
 
-    ${if_match ${downspeedf wlp4s0} >= 30000.0}
-        ,{"full_text":" ${downspeed wlp4s0}","color":"\#FFFF00"}
+    ${if_match ${downspeedf wlp4s0} >= 5000.0}
+        },{"full_text":" ${downspeed wlp4s0}","color":"\#FFFF00"}
     ${else}
         }
     ${endif}
@@ -31,10 +31,8 @@ ${endif}
 ${if_match "$gw_iface" == "enp0s25"}
     " ${addr enp0s25}","color":"\#00FF00"}
 
-    ${if_match ${downspeedf enp0s25} >= 30000.0}
+    ${if_match ${downspeedf enp0s25} >= 5000.0}
         ,{"full_text":" ${downspeed enp0s25}","color":"\#FFFF00"}
-    ${else}
-        }
     ${endif}
 ${endif}
 ,
