--- a/.compton.conf
+++ b/.compton.conf
@@ -96,7 +96,8 @@ shadow-exclude = [
     "class_g ?= 'Notify-osd'",
     "class_g ?= 'Cairo-dock'",
     "class_g ?= 'Xfce4-notifyd'",
-    "class_g ?= 'Xfce4-power-manager'"
+    "class_g ?= 'Xfce4-power-manager'",
+    "_GTK_FRAME_EXTENTS@:c"
 ];
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
 shadow-ignore-shaped = false;
