--- a/.i3/config
+++ b/.i3/config
@@ -12,7 +12,7 @@
 set $mod Mod4
 set $alt Mod1
 
-set $terminal termite
+set $TERMINAL termite
 
 # TODO: Clean this up
 # Font for window titles. Will also be used by the bar unless a different font
@@ -37,8 +37,8 @@ workspace_auto_back_and_forth yes
 hide_edge_borders none
 
 # Start a terminal
-bindsym $mod+Return exec $terminal
-bindsym $mod+Shift+Return exec $terminal
+bindsym $mod+Return exec $TERMINAL
+bindsym $mod+Shift+Return exec $TERMINAL
 
 # Kill focused window
 bindsym $mod+q kill
